# dahua_SDK

./: CMakeLists.txt  README.md  test.cpp
include/: dhconfigsdk.h  play.h
